--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Made To Order Web Services"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Dietrich Web Services</title>
+    <title>Made To Order</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+   
     <div id="root"></div>
     <!--Script for animations-->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
