added sitemap and seo features

--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--Added the following stylesheet for animations-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel='canonical' href='https://made-to-order.ca' />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Made To Order Web Services"
-    />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="description" content="Custom website design and other website services | Website maintenance and deployment" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Made To Order</title>
+    <title>Made To Order Website Services</title>
   </head>
   <body>
    
