--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="canonical" href="https://made-to-order.ca"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--Added the following stylesheet for animations-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
